2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Fix a C99ism.  (#462549, Kazuki IWAMOTO)

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Handle J changes in the pattern
	correctly.  (#444765, Yevgen Muntyan)

2007-08-03  Pramod Raghavendra  <pramodleo@yahoo.co.uk>

	* configure.in: Added kn to ALL_LINGUAS

2007-08-01  Tor Lillqvist  <tml@novell.com>

	* glib/update-pcre/notdll.patch: Update so it applies again.

	* glib/pcre/pcre.h: Corresponding change.

	* glib/gutils.c (get_special_folder): Drop leftover use of a
	union.

	* glibconfig.h.win32.in: Update to match what configure produces.

2007-07-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/*: Update the internal PCRE to 7.2

2007-07-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/pltcheck.sh: Fix some glitches

	* glib/gregex.c: Remove debug spew

2007-07-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c:
	* glib/gregex.c:
	* glib/gstring.c: Various doc cleanups.

2007-07-20  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Add goffset type (64bit file size)
	Add G_MAXSSIZE and G_MINSSIZE

2007-07-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Fix the build.

2007-07-19  Behdad Esfahbod  <behdad@gnome.org>

	* glib/glib.symbols:
	* glib/gunicode.h:
	* glib/gunicodeprivate.h:
	* glib/gunidecomp.c (g_unichar_combining_class):
	* glib/guniprop.c (has_more_above):
	Make g_unichar_combining_class() public. (#453998)

Fri Jul 13 01:01:46 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: more atomic ops pointer cast fixes. this time it'll
	work with atomic op macros *and* atomic op functions.

Fri Jul 13 00:50:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: fixed missing pointer casts when using atomic ops.

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.7 ===

	* NEWS: Updates

Thu Jul 12 17:31:08 2007  Tim Janik  <timj@imendio.com>
